[gd_scene load_steps=3 format=3 uid="uid://jynh313a52fa"]

[ext_resource type="Script" uid="uid://cwyorglw27c3d" path="res://scripts/CardDisplay.gd" id="1_2cqt7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uwdgk"]
bg_color = Color(0.129412, 0.129412, 0.156863, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0.639216, 0.909804, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="CardDisplay" type="Control"]
custom_minimum_size = Vector2(140, 180)
layout_mode = 3
anchors_preset = 0
offset_right = 140.0
offset_bottom = 180.0
script = ExtResource("1_2cqt7")

[node name="CardPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uwdgk")

[node name="MarginContainer" type="MarginContainer" parent="CardPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CardPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="TitleLabel" type="Label" parent="CardPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.639216, 0.909804, 1)
theme_override_font_sizes/font_size = 14
text = "Card Title"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="CostLabel" type="Label" parent="CardPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Cost: 2"
horizontal_alignment = 1

[node name="TypeLabel" type="Label" parent="CardPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Type: Program"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="SubtypeLabel" type="Label" parent="CardPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Icebreaker - Fracter"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="HSeparator" type="HSeparator" parent="CardPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextLabel" type="Label" parent="CardPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 9
text = "Card text would go here describing all the abilities and effects of the card."
autowrap_mode = 3
text_overrun_behavior = 3

[node name="StrengthLabel" type="Label" parent="CardPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Strength: 2"
horizontal_alignment = 2
